# mosaic

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF-release-tags.md  README.md  RELEASING.md  docker-compose.test.yml  index.html  mkdocs.yml  opencode.json  pyproject.toml  run_pipeline.py  sitemap.xml  tasks.md
.github/workflows/: docs.yml  quickstart.yml  release.yml  schema-closure.yml  tests.yml
api-reference/: index.html
cli-reference/: index.html
comparison/: index.html
configuration/: index.html
data-model/: index.html
design/: INDEX.md  appendix_a_example_schema_omics.md  appendix_b_implementation_guide.md  reference_cel_context.md  reference_hippo_core.md  reference_hippo_ext.md  reference_hippo_yaml.md  reference_validators_yaml.md  sec10_recipes.md  sec11_schema_packages.md  sec1_overview.md  sec2_architecture.md  sec3_data_model.md  sec3b_relational_storage.md  sec4_api_layer.md  sec5_ingestion.md  sec6_provenance.md  sec7_nfr.md  sec8_auth_integration.md  sec9_decisions.md  sec9_handoff_2026-04-22.md  sec9_handoff_beta_linkml_native.md  sec9_handoff_mosaic_rename.md  sec9_handoff_recipes_v1.md  sec9_linkml_redesign.md  sec9_progress.md  sec9_progress_2026-04-21.md
design-principles/: index.html
design/INDEX/: index.html
design/appendix_a_example_schema_omics/: index.html
design/appendix_b_implementation_guide/: index.html
design/decisions/: ADR-0001-graph-level-as-of-query.md  ADR-0002-multivalued-reference-slots-as-relationships.md  ADR-0003-polymorphic-tree-root-ingest.md  ADR-0004-rename-hippo-to-mosaic.md  ADR-0005-graphql-reference-emission-edge-only.md  README.md  _template.md
design/reference_cel_context/: index.html
design/reference_hippo_core/: index.html
design/reference_hippo_ext/: index.html
design/reference_hippo_yaml/: index.html
design/reference_validators_yaml/: index.html
design/sec1_overview/: index.html
design/sec2_architecture/: index.html
design/sec3_data_model/: index.html
design/sec3b_relational_storage/: index.html
design/sec4_api_layer/: index.html
design/sec5_ingestion/: index.html
design/sec6_provenance/: index.html
design/sec7_nfr/: index.html
design/sec8_auth_integration/: index.html
design/sec9_decisions/: index.html
design/sec9_handoff_2026-04-22/: index.html
design/sec9_handoff_beta_linkml_native/: index.html
design/sec9_linkml_redesign/: index.html
design/sec9_progress/: index.html
design/sec9_progress_2026-04-21/: index.html
design/sec9_progress_2026-04-21_wave2/: index.html
design/sec9_progress_2026-04-22_wave3/: index.html
design/sec9_spike_linkml_store/: index.html
docs/: api-reference.md  cli-reference.md  comparison.md  configuration.md  data-model.md  design-principles.md  graphql.md  index.md  installation.md  installing-recipes.md  introduction.md  polymorphic-ingest.md  quickstart.md  recipe-reference.md  reference-loaders.md  reference_typed_client.md  schema-guide.md  tui.md  typed-openapi.md  why-mosaic.md  writing-a-domain-module.md  writing-a-recipe.md  writing-a-reference-loader.md
docs/cli-reference/: index.html
docs/data-model/: index.html
docs/reference-loaders/: index.html
docs/reference_typed_client/: index.html
examples/bibliography/: README.md  config.json  provenance_example.md  rest_example.md  sdk_example.py  validators.yaml
examples/omics/: README.md  hippo.yaml  schema.yaml
graphql/: index.html
images/: data-model.excalidraw
installation/: index.html
installing-recipes/: index.html
introduction/: index.html
plan/: PLAN.md
plan/openplan/: HISTORY.md
polymorphic-ingest/: index.html
quickstart/: index.html
recipe-reference/: index.html
reference-loaders/: index.html
reference_typed_client/: index.html
schema-guide/: index.html
scripts/: check_schema_closure.py  extract_release_notes.py
search/: search_index.json
src/hippo/: __init__.py  linkml_bridge.py  requires.py
src/mosaic/: __init__.py  linkml_bridge.py  requires.py
tests/: conftest.py  test_entry_points.py
tests/api/: test_exception_mapping.py  test_factory.py  test_openapi_components.py
tests/cli/: test_bundle_requires.py  test_entity_commands.py  test_ingest.py  test_ingest_polymorphic.py  test_init.py  test_migrate_bundle.py  test_reference_deprovision.py  test_reference_ingest.py  test_reference_install_upgrade.py  test_reference_load_params.py  test_reference_loader_subapp.py  test_serve_command.py  test_validate_requires.py
tests/compat/: test_hippo_alias.py
tests/config/: test_config.py  test_schema.py
tests/contracts/: test_self_contract.py
tests/core/: test_actor_context.py  test_asof_reconstruction.py  test_batch_fetcher.py  test_batch_put.py  test_bulk_availability.py  test_cel_validator.py  test_cel_write_validator.py  test_client.py  test_client_availability.py  test_client_for_schema.py  test_computed_temporal_fields.py  test_cycle_detector.py  test_ddl_generator.py  test_domain_module.py  test_entity_type_conflict.py  test_entry_points.py  test_exceptions.py  test_executor.py  test_expand_path_parser.py  test_expand_resolution.py  test_exposure.py  test_external_id.py  test_external_id_client.py  test_external_xref.py  test_factory.py  test_filter_op_validation.py  test_fts.py  test_fts5_search.py  test_fts_integration.py  test_fts_migration.py  test_fts_search.py  test_hippo_models.py  test_in_filter.py  test_ingestion.py  test_inlined_identified_multivalued.py  test_limit_zero.py  test_linkml_bridge.py  test_load_context.py  test_loader_fragment_merge.py  test_loaders.py  (+46 more)
tests/fixtures/: validators.yaml
tests/graphql/: conftest.py  test_asof.py  test_batch.py  test_depth_limit.py  test_graphql_e2e.py  test_optional_extra.py  test_parity.py  test_schema_builder.py  test_xref.py
tests/integration/: test_e2e.py  (+13 more)
tui/: index.html
typed-openapi/: index.html
user-docs/: cli-reference.md  configuration.md  schema-guide.md
why-hippo/: index.html
why-mosaic/: index.html
writing-a-domain-module/: index.html
writing-a-recipe/: index.html
writing-a-reference-loader/: index.html
(+597 files in other folders)
