[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippo"
version = "0.5.0"
description = "SDK-first, infrastructure-agnostic metadata tracking service for bioinformatics research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "typer",
    "fastapi",
    "uvicorn[standard]",
    "common-expression-language",
    "linkml>=1.8",
    "linkml-runtime>=1.8",
    "linkml-store>=0.3",
]

[project.optional-dependencies]
rest = ["fastapi", "uvicorn[standard]"]
postgres = ["psycopg[binary,pool]>=3.1"]
tui = [
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
]
loaders-sql = ["sqlalchemy>=2.0"]
loaders-json = ["jsonpath-ng>=1.6"]
loaders-all = ["sqlalchemy>=2.0", "jsonpath-ng>=1.6"]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",   # FastAPI test client
]
all = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary,pool]>=3.1",
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "jsonpath-ng>=1.6",
]

[project.scripts]
hippo = "hippo.cli.main:app"

[project.entry-points."hippo.storage_adapters"]
sqlite = "hippo.adapters.sqlite.store:SQLiteEntityStore"
postgres = "hippo.core.storage.adapters.postgres_adapter:PostgresAdapter"

[project.entry-points."hippo.write_validators"]
schema = "hippo.validators.schema_validator:SchemaValidator"

[project.entry-points."hippo.reference_loaders"]
fake = "hippo.testing.fake_reference_loader:FakeReferenceLoader"
rich = "hippo.testing.fake_reference_loader:RichParamsLoader"
bare = "hippo.testing.fake_reference_loader:BareReferenceLoader"

[project.entry-points."hippo.reference_loader_cli"]
fake = "hippo.testing.fake_reference_loader:fake_cli_app"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
