[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippo"
version = "0.10.2"
description = "A runtime for LinkML schemas. Generates a typed SDK, REST API, append-only provenance store, and dynamic validation from a schema definition."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "typer",
    "fastapi",
    "uvicorn[standard]",
    "common-expression-language",
    "linkml>=1.8",
    "linkml-runtime>=1.8",
    "linkml-store>=0.3",
]

[project.optional-dependencies]
rest = ["fastapi", "uvicorn[standard]"]
postgres = ["psycopg[binary,pool]>=3.1"]
tui = [
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
]
graphql = ["strawberry-graphql[fastapi]>=0.262"]
loaders-sql = ["sqlalchemy>=2.0"]
loaders-json = ["jsonpath-ng>=1.6"]
loaders-all = ["sqlalchemy>=2.0", "jsonpath-ng>=1.6"]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",   # FastAPI test client
]
all = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary,pool]>=3.1",
    "strawberry-graphql[fastapi]>=0.262",
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "jsonpath-ng>=1.6",
]

[project.scripts]
hippo = "hippo.cli.main:app"

[project.entry-points."hippo.storage_adapters"]
sqlite = "hippo.core.storage.adapters.sqlite_adapter:SQLiteAdapter"
postgres = "hippo.core.storage.adapters.postgres_adapter:PostgresAdapter"

[project.entry-points."hippo.write_validators"]
schema = "hippo.validators.schema_validator:SchemaValidator"

# Genus group (Doc 2 §2A). ``hippo.reference_loaders`` below is a
# subset/alias carrying the external-data species; discovery resolves both
# and dedups by name. Pure-schema packages register here only.
[project.entry-points."hippo.schema_packages"]
fake_schema = "hippo.testing.fake_reference_loader:FakeSchemaPackage"
obodemo = "hippo.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."hippo.reference_loaders"]
fake = "hippo.testing.fake_reference_loader:FakeReferenceLoader"
rich = "hippo.testing.fake_reference_loader:RichParamsLoader"
bare = "hippo.testing.fake_reference_loader:BareReferenceLoader"
obodemo = "hippo.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."hippo.reference_loader_cli"]
fake = "hippo.testing.fake_reference_loader:fake_cli_app"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
