[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahelix-mosaic"
version = "0.11.0"
description = "Mosaic (formerly Hippo): a runtime for LinkML schemas. Generates a typed SDK, REST API, append-only provenance store, and dynamic validation from a schema definition."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["linkml", "metadata", "provenance", "schema", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "typer",
    "fastapi",
    "uvicorn[standard]",
    "common-expression-language",
    "linkml>=1.8",
    "linkml-runtime>=1.8",
    "linkml-store>=0.3",
]

[project.optional-dependencies]
rest = ["fastapi", "uvicorn[standard]"]
postgres = ["psycopg[binary,pool]>=3.1"]
tui = [
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
]
graphql = ["strawberry-graphql[fastapi]>=0.262"]
loaders-sql = ["sqlalchemy>=2.0"]
loaders-json = ["jsonpath-ng>=1.6"]
loaders-all = ["sqlalchemy>=2.0", "jsonpath-ng>=1.6"]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",   # FastAPI test client
]
all = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary,pool]>=3.1",
    "strawberry-graphql[fastapi]>=0.262",
    "textual>=0.50.0,<1.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "jsonpath-ng>=1.6",
]

[project.scripts]
mosaic = "mosaic.cli.main:app"
# Deprecated alias (ADR-0004): prints a stderr notice, then delegates to
# the mosaic CLI. Removal gated on a future ADR after the deprecation window.
hippo = "mosaic.cli.compat:legacy_main"

# Entry-point groups (ADR-0004 / WP-H3): ``mosaic.*`` is canonical; the
# legacy ``hippo.*`` spellings stay dual-registered for the deprecation
# window. Resolution reads both groups and dedups by entry-point name
# (mosaic wins), so a plugin registered under both spellings loads once.
[project.entry-points."mosaic.storage_adapters"]
sqlite = "mosaic.core.storage.adapters.sqlite_adapter:SQLiteAdapter"
postgres = "mosaic.core.storage.adapters.postgres_adapter:PostgresAdapter"

[project.entry-points."hippo.storage_adapters"]
sqlite = "mosaic.core.storage.adapters.sqlite_adapter:SQLiteAdapter"
postgres = "mosaic.core.storage.adapters.postgres_adapter:PostgresAdapter"

[project.entry-points."mosaic.write_validators"]
schema = "mosaic.validators.schema_validator:SchemaValidator"

[project.entry-points."hippo.write_validators"]
schema = "mosaic.validators.schema_validator:SchemaValidator"

# Genus group (Doc 2 §2A). ``mosaic.reference_loaders`` below is a
# subset/alias carrying the external-data species; discovery resolves both
# and dedups by name. Pure-schema packages register here only.
[project.entry-points."mosaic.schema_packages"]
fake_schema = "mosaic.testing.fake_reference_loader:FakeSchemaPackage"
obodemo = "mosaic.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."hippo.schema_packages"]
fake_schema = "mosaic.testing.fake_reference_loader:FakeSchemaPackage"
obodemo = "mosaic.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."mosaic.reference_loaders"]
fake = "mosaic.testing.fake_reference_loader:FakeReferenceLoader"
rich = "mosaic.testing.fake_reference_loader:RichParamsLoader"
bare = "mosaic.testing.fake_reference_loader:BareReferenceLoader"
obodemo = "mosaic.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."hippo.reference_loaders"]
fake = "mosaic.testing.fake_reference_loader:FakeReferenceLoader"
rich = "mosaic.testing.fake_reference_loader:RichParamsLoader"
bare = "mosaic.testing.fake_reference_loader:BareReferenceLoader"
obodemo = "mosaic.testing.example_ontology_loader:OboDemoLoader"

[project.entry-points."mosaic.reference_loader_cli"]
fake = "mosaic.testing.fake_reference_loader:fake_cli_app"

[project.entry-points."hippo.reference_loader_cli"]
fake = "mosaic.testing.fake_reference_loader:fake_cli_app"

# ``src/hippo`` is the one-file deprecated alias package (WP-H2): the wheel
# ships both so ``import hippo`` keeps working during the deprecation window.
[tool.hatch.build.targets.wheel]
packages = ["src/mosaic", "src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
